--- a/template.yaml
+++ b/template.yaml
@@ -5,16 +5,18 @@
 # This is the SAM template that represents the architecture of your serverless application
 # https://docs.aws.amazon.com/serverless-application-model/latest/developerguide/serverless-sam-template-basics.html
 
-# The AWSTemplateFormatVersion identifies the capabilities of the template
-# https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/format-version-structure.html
-AWSTemplateFormatVersion: 2010-09-09
-Description: aws-ipam-monitor
+AWSTemplateFormatVersion: '2010-09-09'
+Description: IPAM Monitor App SAM Template
+Transform: AWS::Serverless-2016-10-31
 
-# Transform section specifies one or more macros that AWS CloudFormation uses to process your template
-# https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/transform-section-structure.html
-Transform:
-- AWS::Serverless-2016-10-31
-
+Parameters:
+  IpamUsageThreshold:
+    Type: String
+    Default: "80.0"
+  IpamSnsTopic: 
+    Type: String
+    Default: ""
+  
 # Resources declares the AWS resources that you want to include in the stack
 # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/resources-section-structure.html
 Resources:  
@@ -33,12 +35,12 @@ Resources:
       MemorySize: 256
       Environment:
         Variables:
-          IPAM_USAGE_THRESHOLD: 80.0
-          IPAM_SCOPE_TYPE: private
-          IPAM_RESOURCE_TYPE: '*'
-          IPAM_SNS_TOPIC: ''
-          IPAM_CLOUDWATCH_NAMESPACE: CUSTOM/IPAM
-          IPAM_CLOUDWATCH_ENABLED: true
+          IpamUsageThreshold: !Ref IpamUsageThreshold
+          IpamScopeType: private
+          IpamResourceType: '*'
+          IpamSnsTopic: !Ref IpamSnsTopic
+          IpamCloudWatchNamespace: CUSTOM/IPAM
+          IpamCloudWatchEnabled: true
       Role: !GetAtt IpamMonitorLambdaExecutionRole.Arn
   #=========================================================
   # EVENT BRIDGE SCHEDULE RULE
